WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
291576
AX: [AX Thread Text APIs] text run strings shouldn't transform full-size-kana
https://bugs.webkit.org/show_bug.cgi?id=291576
Summary
AX: [AX Thread Text APIs] text run strings shouldn't transform full-size-kana
Joshua Hoffman
Reported
2025-04-15 10:59:03 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-04-15 10:59:18 PDT
<
rdar://problem/149313877
>
Joshua Hoffman
Comment 2
2025-04-15 11:03:15 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/44102
EWS
Comment 3
2025-04-15 13:40:17 PDT
Committed
293726@main
(5a6bcd4edc06): <
https://commits.webkit.org/293726@main
> Reviewed commits have been landed. Closing PR #44102 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug