AX: [AX Thread Text APIs] text run strings shouldn't transform full-size-kana https://bugs.webkit.org/show_bug.cgi?id=291576 rdar://149313877

Reviewed by Tyler Wilcock.

Previously, we got the untransformed text from the text iterator. Now that we cache the
text runs, we need to make sure that when the full-size-kana text transform is applied,
we cache the untransformed text.

* LayoutTests/accessibility-isolated-tree/TestExpectations:
* Source/WebCore/accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::textRuns):

Canonical link: https://commits.webkit.org/293726@main